fix margin to gap with flexbox

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 
 section {
     max-width: 80%;
-    margin-top: 40px;
+    margin-top: 60px;
 }
 
 
@@ -29,6 +29,7 @@ section {
     font-size: 32px;
     line-height: 40px;
     font-weight: 700;
+    margin-bottom: 40px;
 }
 
 
@@ -43,12 +44,6 @@ section {
     top: 0;
     */
 }
-
-.header:hover {
-    opacity: 1;
-}
-
-
 
 .header-box {
     max-width: 80%;
@@ -201,7 +196,6 @@ section {
 .about-text {
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
-    padding: 20px 40px;
     max-width: 1200px;
 
 }
@@ -209,14 +203,15 @@ section {
 .button-box {
     display: flex;
     justify-content: center;
-    padding: 10px;
+    gap: 20px 60px;
+    margin-top: 20px;
 }
 
 
 .btn {
-    margin: 5px 40px;
     width: 233px;
     height: 60px;
+    margin: 0;
     font-size: 20px;
     font-weight: 700;
     text-decoration: none;
@@ -230,6 +225,7 @@ section {
     letter-spacing: 0.1em;
     box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.4
     ) ;
+    
 }
 
 
@@ -253,7 +249,7 @@ section {
     
     .about-text{
         font-size: 14px;
-        padding: 10px 15px;
+
     }
     
     .button-box  {
@@ -262,7 +258,6 @@ section {
     }
 
     .btn {
-    margin: 10px;
     width: 200px;
     height: 50px;
     font-size: 14px;
@@ -286,14 +281,14 @@ section {
     flex-wrap: wrap;
     justify-content: center;
     max-width: 1200px;
+    gap: 20px;
 }
 
 .work-contents {
     width: 345px;
     height: 327px;
     position: relative;
-    border-radius: 20px;
-    margin: 30px 15px 0 0;
+    border-radius: 30px;
     box-shadow: 13px 10px 10px rgba(0, 0, 0, 0.4
     ) ;
     transition: all 0.3s ease;
@@ -372,22 +367,25 @@ section {
 .skills-text {
     display: flex;
     flex-wrap: wrap;
-    padding: 40px 0;
-    
+    gap: 30px;
 }
 
 .skills-text span {
     font-family: 'Press Start 2P', cursive;
     font-size: 23px;
-    padding: 20px;
     margin-left: 0;
 }
 
 
 @media only screen and (max-width: 800px) {
-    .skills-text {
-        max-width: 270px;
+    .skills-text span {
+        font-size: 18px;
+        line-height: 1.5;
     }
+
+  }
+
+  @media only screen and (max-width: 390px) {
     .skills-text span {
         font-size: 14px;
         line-height: 1.5;
@@ -399,7 +397,6 @@ section {
 /* contact section */
 
 .contact-text {
-    padding: 30px;
     font-size: 20px;
 }
 
@@ -411,12 +408,12 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
 }
 
 .contact-form label {
     font-size: 20px;
     margin-left: 0;
-    padding: 10px;
 }
 
 .form-input {
@@ -434,27 +431,25 @@ section {
     border-radius: 20px;
     width: 100%;
     min-height: 100px;
-    padding: 10px;
     background-color: transparent;
     border: 1px solid #40322777 ;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4) ;
     font-size: 16px;
+    padding: 10px;
 }
 
-form .btn {
-    margin-top: 30px; 
+.contact-form .btn {
+        margin-top: 20px;
 }
 
 @media only screen and (max-width: 800px) {
 
     .contact-text{
         font-size: 14px;
-        padding: 0 0 5px 0;
     }
 
     .contact-form label {
         font-size: 14px;
-        padding-bottom: 5px;
     }
 
   }
@@ -496,11 +491,11 @@ footer {
 
     footer{
         flex-direction: column-reverse;
+        gap: 10px;
     }
 
     .icon-list{
-        padding-left: 0;
-        padding-bottom: 10px;
+        padding: 0;
     }
     
     .icon {
